# TaskReminderServer

./: .gitignore  Dockerfile  Readme.md  db.sqlite3  log.conf  main.py  pyproject.toml
.github/workflows/: deploy.yml
bicep/: main.bicep
infra/: main.bicep
taskreminder/: Readme.md  app.py  auth.py  dao.py  db.py  models.py  routes.py  services.py
taskserver/: .env  app.py  auth.py  crud.py  database.py  models.py  routes.py  schemas.py
tests/: conftest.py  test_dao.py  test_mainapp.py  test_taskapi.py  test_userapi.py
